--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,27 @@
 }
 
 
+
+/* styles for light theme */
 body[data-theme="light"] {
   background-color: #E0E8F6;
+}
+
+/* styles for hero section animation */
+.hero {
+  opacity: 0;
+  transform: translateX(0);
+  transition: all 0.8s ease-out;
+}
+
+.from-left {
+  transform: translateX(-100px);
+}
+.from-right {
+  transform: translateX(100px);
+}
+
+.show {
+  opacity: 1;
+  transform: translateX(0);
 }
